--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <link href="/dist/output.css" rel="stylesheet">
 </head>
 
-<body class="flex justify-center">
-    <div class="h-[42.0cm] w-[29.7cm] shadow-xl px-4 flex flex-col space-y-5">
-        <div class="mt-3">
+<body class="flex justify-center poppins">
+    <div class="w-[29.7cm] shadow-xl flex flex-col space-y-6 pb-6">
+        <div class="pt-3 bg-yellow-200">
             <div class="flex justify-center space-x-10">
                 <div class="h-40 w-40 bg-red-600 rounded-full shrink-0"></div>
                 <div class="text-center">
@@ -85,7 +85,7 @@
                         <th class="border border-black">Grade</th>
                     </thead>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">English</td>
+                        <td class="border border-black font-semibold px-3">English</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -95,7 +95,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Mathematics</td>
+                        <td class="border border-black font-semibold px-3">Mathematics</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -105,7 +105,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Science</td>
+                        <td class="border border-black font-semibold px-3">Science</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -115,7 +115,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Social Studies</td>
+                        <td class="border border-black font-semibold px-3">Social Studies</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -125,7 +125,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Religion</td>
+                        <td class="border border-black font-semibold px-3">Religion</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -135,7 +135,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Quran</td>
+                        <td class="border border-black font-semibold px-3">Quran</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -145,7 +145,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Arabic</td>
+                        <td class="border border-black font-semibold px-3">Arabic</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -155,7 +155,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Basic Science</td>
+                        <td class="border border-black font-semibold px-3">Basic Science</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -165,7 +165,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Geology</td>
+                        <td class="border border-black font-semibold px-3">Geology</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -175,7 +175,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Data Structures and Algorithms</td>
+                        <td class="border border-black font-semibold px-3">Data Structures and Algorithms</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -185,7 +185,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Software Engineering</td>
+                        <td class="border border-black font-semibold px-3">Software Engineering</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -195,7 +195,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Object Oriented Programming</td>
+                        <td class="border border-black font-semibold px-3">Object Oriented Programming</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -205,7 +205,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Automata</td>
+                        <td class="border border-black font-semibold px-3">Automata</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
@@ -215,7 +215,7 @@
                         <td class="border border-black">A</td>
                     </tr>
                     <tr class="text-center">
-                        <td class="border border-black font-bold px-3">Computer science</td>
+                        <td class="border border-black font-semibold px-3">Computer science</td>
                         <td class="border border-black">80</td>
                         <td class="border border-black">90</td>
                         <td class="border border-black">180</td>
