add max height to remarks

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body class="flex justify-center poppins">
-    <div class="w-[29.7cm] shadow-xl flex flex-col space-y-6 pb-6">
+    <div class="w-[29.7cm] shadow-xl flex flex-col space-y-6 pb-3">
         <div class="pt-3 bg-yellow-200">
-            <div class="flex justify-center space-x-10">
+            <div class="flex justify-center space-x-10 px-2">
                 <div class="h-40 w-40 bg-red-600 rounded-full shrink-0"></div>
                 <div class="text-center">
                     <h1 class="text-4xl font-bold">RADIANT MINDS SCHOOL</h1>
@@ -433,7 +433,7 @@
             </table>
         </div>
         <div class="flex flex-col px-5 space-y-4">
-            <div class="border border-black flex space-x-3 px-4">
+            <div class="border border-black flex space-x-3 px-4 max-h-20">
                 <div class="flex space-x-3 items-center">
                     <span class="font-bold min-w-fit">Class Teacher's Remark</span>
                     <span class="text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, libero dolor
@@ -447,7 +447,7 @@
                     <span>;jfnglkjsfbvksjfdbvljdf</span>
                 </div>
             </div>
-            <div class="border border-black flex space-x-3 px-4">
+            <div class="border border-black flex space-x-3 px-4 max-h-20">
                 <div class="flex space-x-3 items-center">
                     <span class="font-bold min-w-fit">HOS's Remark</span>
                     <span class="text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, libero dolor
